Fixed blue highlight clicking buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
   align-items: center;
   flex-direction: column;
 }
-.body * {
+button,
+a {
   -webkit-tap-highlight-color: transparent;
 }
 
